[package]
name = "lame4j"
version = "2.0.3"
edition = "2021"

[dependencies]
jni = "0.21.1"
mp3lame-sys = { git = "https://github.com/ThatMG393/mp3lame-sys" }
libc = "0.2.140"
minimp3 = "0.5"

[lib]
crate_type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = "symbols"
debug = false
